--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stockfish-test",
+  "name": "react-stockfish-web-worker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,17 +13,15 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
+    "vite": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite"
   },
   "eslintConfig": {
     "extends": [
