Added a way to use stockfish-nnue.wasm from

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-react": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stockfish-nnue.wasm": "^1.0.0-alpha.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "web-vitals": "^2.1.4"
