--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.1",
+    "chess.js": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stockfish-nnue.wasm": "^1.0.0-alpha.2",
+    "stockfish-nnue.wasm": "^1.0.0-1946a675.smolnet",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "web-vitals": "^2.1.4"
