Toggle between hi-ogawa/stockfish-nnue.wasm and nmrugg/stockfish.js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chess.js": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stockfish": "^15.0.0",
     "stockfish-nnue.wasm": "^1.0.0-1946a675.smolnet",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
